--- a/Project.toml
+++ b/Project.toml
@@ -14,25 +14,30 @@ SciMLSensitivity = "1ed8b502-d754-442c-8d5d-10ac956f44a1"
 [weakdeps]
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 FMIBase = "900ee838-d029-460e-b485-d98a826ceef2"
-ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
-ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+
+[extras]
+Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
+FMIBase = "900ee838-d029-460e-b485-d98a826ceef2"
+Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 
 [extensions]
-FMIBaseExt = ["FMIBase"]
-ForwardDiffExt = ["ForwardDiff"]
 FluxExt = ["Flux"]
+FMIBaseExt = ["FMIBase"]
 LuxExt = ["Lux"]
-ReverseDiffExt = ["ReverseDiff"]
+PlotsExt = ["Plots"]
 
 [compat]
 ComponentArrays = "0.15.0"
-DiffEqCallbacks = "2.0 - 3.6"
-Flux = "0.14.0"
+DiffEqCallbacks = "2.0, 3.0, 4.0" 
+Flux = "0.14 - 0.16"
 FMIBase = "1.0.0"
-Lux = "0.5.0"
-Optim = "1.9.0"
+Lux = "1.0"
+Optim = "1.9"
 PackageExtensionCompat = "1.0"
+Plots = "1"
 Random = "1"
-SciMLSensitivity = "7.0 - 7.59"
+SciMLSensitivity = "7.0"
 julia = "1.6"
